--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/jest": "^27.0.2",
     "jest": "^27.2.4",
+    "pg-promise": "^10.11.0",
     "typescript": "^4.4.3"
   }
 }
