--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && jest ./dist",
+    "test": "tsc && jest ./dist --forceExit",
     "coverage": "tsc && jest ./dist --coverage"
   },
   "author": "",
