--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc && jest ./dist --forceExit",
-    "coverage": "tsc && jest ./dist --coverage"
+    "coverage": "tsc && jest ./dist --coverage",
+    "main": "tsc && node ./dist/src/main "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
+    "express": "^4.17.3",
     "jest": "^27.2.4",
+    "nodemon": "^2.0.15",
     "pg-promise": "^10.11.0",
     "typescript": "^4.4.3"
   }
